manifests/core/longhorn/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: mainissuer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.internal.krea.to`)
      priority: 10
      middlewares:
        - name: traefik-internal-hosts@kubernetescrd
      services:
        - kind: Service
          name: longhorn-frontend
          namespace: longhorn-system
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    secretName: wildcard-krea.to-tls
    domains:
      - main: longhorn.internal.krea.to
